--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Spaceman Web Designer</title>
+	<title>Spaceman Web DesigNER</title>
 	<link rel="stylesheet" href="estilos.css" class="">
 	<script type="text/javascript" src="scripts.js"></script>
 
@@ -18,15 +18,29 @@
 			<li><a href="" class="">Contacto</a></li>
 		</ul>
 	</section>
-		
-	<main id="cuerpo">
-		<img class="img_inicio" src="img_1.jpg">
-			<h1>Pinche página web mamalona</h1>
-			<p class="referencia">Por la anécdota</p>
+	<h1>Diseño de páginas web profesionales</h1>
+	<h2>Si puedes imaginarlo, lo hacemos posible</h2>
+	<section class="portada">
+		<img class="img_portada" src="img_1.jpg">
+	</section>
+	<main class="inicio">
+		<img class="img_inicio" src="img_2.jpg">
+		<div class="info_inicio">
+			<h3>Soluciones inteligentes para tu empresa</h3>
+			<h4>Innovación, alcance y proyección de tu empresa en segundos</h4>
+			<p>En teoría en este párrafo se resaltan todas las cualidades impresionantes del servicio en cuestión, pero aún no tengo ideas al respecto, así que lo dejaré para luego, con más calmita. Al menos esto es mejor que poner un Lorem ipsum</p>
+		</div>
 	</main>
-
+	<section class="nosotros">
+		<ul class="lista_nosotros">
+			<li><a href="">Primera sección</a></li>
+			<li><a href="">Segunda sección</a></li>
+			<li><a href="">Tercera sección</a></li>
+		</ul>
+	</section>
 </body>
 </html>
+
 
 
 
